# multilingual-ai-tutor

./: .cursorrules  .gitignore  .gitmodules  README.md  package.json
Desktop/multilingual-ai-tutor/: .gitignore  tsconfig.base.json
Desktop/multilingual-ai-tutor/apps/mobile/src/screens/: HomeScreen.tsx  LearnScreen.tsx  ProfileScreen.tsx
Desktop/multilingual-ai-tutor/apps/teacher-web/: package.json
Desktop/multilingual-ai-tutor/apps/teacher-web/src/: App.tsx
apps/mobile/: App.tsx  app.json  package.json
apps/mobile/src/constants/: colors.ts  sizes.ts
apps/mobile/src/data/: curriculum.ts  translations.ts
apps/mobile/src/native/: LlamaEngine.ts
apps/mobile/src/navigation/: LearnStackNavigator.tsx  MainTabNavigator.tsx  OnboardingNavigator.tsx  RootNavigator.tsx  types.ts
apps/mobile/src/screens/: HomeScreen.tsx  LearnScreen.tsx  PracticeScreen.tsx  ProfileScreen.tsx  VillageScreen.tsx
apps/mobile/src/screens/learn/: LessonScreen.tsx  SubjectListScreen.tsx  TopicListScreen.tsx
apps/mobile/src/screens/onboarding/: LanguageSelectScreen.tsx  ProfileSetupScreen.tsx  TutorialScreen.tsx  WelcomeScreen.tsx
apps/mobile/src/stores/: appStore.ts
apps/teacher-web/: index.html  tsconfig.json
apps/teacher-web/src/: main.tsx
native/llama-android/: CMakeLists.txt
native/llama-android/src/: llama_jni.cpp
scripts/: copy-model.js
